--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: ;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
     margin: 0;
 }
 
@@ -7,19 +7,12 @@ body {
     background-color: lightcyan;
     display: flex;
     height: 75px;
-
-
 }
 
-.buttonHead {
-    height: 20px;
-    width: 75px;
-    margin:8px;
-
-}
 
 h1 {
-    font-size: x-large;
+    font-size: xx-large;
+    margin:3px;
 }
 
 #Picture {
@@ -30,13 +23,25 @@ h1 {
 .position {
    list-style-type: none;
    margin:5px;
-   margin-left:2px;
-
 
 }
+
 
 ul {
     display : flex;
     flex-wrap: wrap;
     background-color: rgb(183, 243, 72);
+    margin:0;
+    padding:5px;
+    font-size: large;
 }
+
+.Picture1 {
+    height:175px;
+    width: 122px;
+}
+
+.manga {
+    display:flex;
+    margin-top: 10px;
+} 
