--- a/style.css
+++ b/style.css
@@ -29,19 +29,37 @@ h1 {
 
 ul {
     display : flex;
-    flex-wrap: wrap;
     background-color: rgb(183, 243, 72);
     margin:0;
-    padding:5px;
     font-size: large;
 }
 
 .Picture1 {
-    height:175px;
-    width: 122px;
+    height:300px;
+    width: 225px;
+}
+
+#background  {
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
 .manga {
     display:flex;
-    margin-top: 10px;
+    margin: 30px;
+    border: 3px solid blue;
+}
+
+.titleOfManga {
+    text-align: end;
+}
+
+
+
+#footer {
+    display:flex;
+    justify-content:space-around;
+   padding: 1%;
+   font-size: 1.5rem;
 } 
