--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
 
 .position {
    list-style-type: none;
-   margin:5px;
+   padding-right: 15%;
 
 }
 
@@ -31,7 +31,8 @@ ul {
     display : flex;
     background-color: rgb(183, 243, 72);
     margin:0;
-    font-size: large;
+    font-size: 1.25rem;
+    justify-content: space-around;
 }
 
 .Picture1 {
@@ -40,8 +41,12 @@ ul {
 }
 
 #background  {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 50px 150px 100px;
+    justify-items: stretch;
+    align-items: stretch;
+    justify-content: space-evenly;
+    gap: 20px;
 
 }
 
@@ -62,4 +67,5 @@ ul {
     justify-content:space-around;
    padding: 1%;
    font-size: 1.5rem;
+   background: coral;
 } 
