--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
 #head {
     background: black;
     display: flex;
-    height: 75px;
+    height: 100px;
     border-bottom: 1px solid white;
+    font-size: medium;
 }
 
 
 h1 {
-    font-size: xx-large;
     margin:3px;
     color:white;
 }
@@ -26,6 +26,7 @@ h1 {
    list-style-type: none;
    padding-right: 15%;
    color: white;
+   font-size: 1.5rem;
 
 }
 
@@ -34,7 +35,6 @@ ul {
     display : flex;
     background: black;
     margin:0;
-    font-size: 1.25rem;
     justify-content: space-around;
 }
 
