--- a/Event.css
+++ b/Event.css
@@ -1,11 +1,11 @@
+
+
 body {
     background-image: url(village\ de\ konoha.jpg);
     background-repeat: no-repeat;
     background-size:cover;
+    background-position: center;
     margin:0;
-}
-
-  
 }
 
 header {
@@ -22,7 +22,60 @@ h1 {
     margin-right: 25%;
     border-radius: 40%;
     font-size: 3rem;
-    
-    
-    
 }
+
+#grid {
+    display: grid;
+    grid-template-columns:484px 500px 200px auto;
+    grid-template-rows: repeat(7, 550px) ;
+}
+
+
+#description {
+    grid-column-start: 2;
+    grid-row-start: 1;
+}
+
+#item1  {
+     grid-column-start:2;
+     grid-row-start: 2 ;
+}
+
+#item2  {
+    grid-column-start:4;
+    grid-row-start: 3 ;
+}
+
+#item3  {
+    grid-column-start:2;
+    grid-row-start: 4 ;
+}
+
+#item4  {
+    grid-column-start:4;
+    grid-row-start: 5 ;
+}
+
+#item5  {
+    grid-column-start:2;
+    grid-row-start: 6 ;
+}
+
+#item6  {
+    grid-column-start:4;
+    grid-row-start: 7 ;
+}
+
+
+#Lelouch {
+    height: 550px;
+    width: 484px;
+    position: fixed;
+    top: 45%;
+}
+.Picture {
+    height: 500px;
+    width: 500px;
+   
+} 
+
