--- a/Event.css
+++ b/Event.css
@@ -40,7 +40,6 @@ h1 {
     grid-template-rows: repeat(7, 550px) ;
 }
 
-
 #description {
     list-style-type: none;
     grid-column-start: 2;
@@ -83,6 +82,43 @@ h1 {
     grid-row-start: 7 ;
 }
 
+#item7  {
+    grid-column-start:3;
+    grid-column-end: 5;
+    grid-row-start: 2 ;
+}
+#item8  {
+    grid-column-start:2;
+    grid-column-end: 4;
+    grid-row-start: 3 ;
+}
+#item9  {
+    grid-column-start:3;
+    grid-column-end: 5;
+    grid-row-start: 4 ;
+}
+#item10  {
+    grid-column-start:2;
+    grid-column-end: 4;
+    grid-row-start: 5 ;
+}
+
+#item11  {
+    grid-column-start:3;
+    grid-column-end: 5;
+    grid-row-start: 6 ;
+}
+
+.backgroundText {
+    background: lightgray;
+    opacity: 0.8;
+}
+.font {
+    font-size: 2rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(22, 133, 22);
+}
+
 
 #Lelouch {
     height: 550px;
@@ -95,6 +131,4 @@ h1 {
     width: 500px;
    
 } 
-
-
 
