--- a/Event.css
+++ b/Event.css
@@ -157,7 +157,7 @@ h1 {
     opacity: 0.75a ;
 }
 
-@media screen and (max-width:1920px) {
+@media screen and (max-width:1900px) {
     #Lelouch {
         display: none;
     }
@@ -331,11 +331,11 @@ h1 {
     }
 
     #description {
-        font-size: 0.75rem;
+        font-size: 0.70rem;
     }
 
     header p {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     #footer {
@@ -343,10 +343,28 @@ h1 {
     }
 
     #textFooter {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
 
     .font {
         font-size:0.8rem;
+    }
+
+    #textFooter {
+        font-size:1rem;
+    }
+
+    header h1 {
+        font-size: 1.75rem;
+    }
+}
+
+@media screen and (max-width:400px) {
+    .font {
+        font-size: 0.7rem;
+    }
+
+    header h1 {
+        font-size:1.4rem;
     }
 }
