--- a/style.css
+++ b/style.css
@@ -23,10 +23,9 @@ h1 {
 }
 
 .position {
-   list-style-type: none;
-   padding-right: 15%;
-   color: white;
+   color: rgb(253, 252, 252);
    font-size: 1.5rem;
+   margin-bottom:none;
 
 }
 
@@ -53,9 +52,10 @@ ul {
     justify-items: stretch;
     align-items: stretch;
     justify-content: space-around;
-    gap: 30px;
-    background: radial-gradient(rgb(253, 43, 43), white);
-
+    gap: 50px;
+    background: radial-gradient(circle at 50%, rgb(248, 248, 248), #333 75%, #eee 25%, #333 75%);
+    border-top:1px white solid;
+    border-bottom:1px white solid;
 }
 .essaie {
     display: flex;
@@ -65,26 +65,27 @@ ul {
 
 .manga {
     display:flex;
-    /*margin-top: 20px;
-    margin-bottom: 20px;*/
     background: white;;
     border-radius: 0% 10% 10% 0%;
+    border:  rgb(114, 114, 114) solid ;
 }
 
-
-
-
 #footer {
-    display:flex;
-    justify-content:space-around;
-   padding: 1%;
+   padding: 0.5%;
    font-size: 1.5rem;
    background: black;
 } 
 
-.childFooter {
-    color: white;
+.listFooter {
+    list-style-type: none;
+    color:white;
 }
+
+.childFooter {
+    color:white;
+}
+
+
 
 @media screen and (max-width: 1500px) {
     #background {
